tdf#76174: basic: lock SolarMutex in BasicScriptListener_Impl

... before calling into BASIC.

Change-Id: I51a59fe5ca9b15ff7ec509c052964523d87a9790
(cherry picked from commit a4faad707c7fb27884fff5f20e5797b160d4f320)